# agent-research

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: precommit.yaml
agent/: batched.py  container.py  env.py  prompts.py
agent/chats/: __init__.py  interface.py  openai.py
agent/chats/impl/: openai.py
agent/embeddings/: __init__.py  interface.py  openai.py
agent/embeddings/impl/: openai.py
agent/extractors/: __init__.py  interface.py  pdf.py
agent/extractors/impl/: pdf.py
agent/graphs/: base.py  interface.py  models.py
agent/graphs/impl/: __init__.py  expert.py  plan.py
agent/graphs/nodes/: interface.py
agent/graphs/prebuilt/: react.py
agent/graphs/workflows/: booking_assistant.py  research.py
agent/models/: booking.py  document.py  embeddings.py  messages.py  stream.py
agent/programs/: __init__.py  base.py  dialog_question.py  exc.py  interface.py  macro_report.py  queries.py
agent/programs/impl/: booking.py  dialog_question.py  evaluation.py  outline.py  search_queries.py
agent/prompts/: __init__.py  core.py
agent/prompts/booking/: coordinator.md  faq.md  (+2 more)
agent/searches/: __init__.py  interface.py
agent/storages/: local.py
agent/text_splitters/: __init__.py  interface.py
agent/tools/: base.py  interface.py  interrupt.py  models.py
applications/booking_assistant/: chat.py  code_review_CI.md  design.md  indexing.py  pros_cons.md
applications/conversation_eval/: chat.py  demo.py  demo_highlight.py  indexing.py
lessons/: README.md  demo.py
lessons/langgraph/: README.md  demo.py
(+20 files in other folders)
