[project]
name = "research-agent"
version = "0.1.0"
description = "research-agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.2,<0.7.0",
    "duckduckgo-search>=8.0.1,<8.1.0",
    "langchain-text-splitters>=0.3.8,<0.4.0",
    "langgraph>=0.4.1,<0.5.0",
    "openai>=1.76.2,<1.77.0",
    "pip>=25.1,<26.0",
    "pydantic>=2.11.4,<2.12.0",
    "pydantic-settings>=2.9.1,<2.10.0",
    "pymilvus>=2.5.8,<2.6.0",
    "pymupdf>=1.25.5,<1.26.0",
    "streamlit>=1.45.0",
    "tavily-python>=0.7.0,<0.8.0",
    "tenacity>=9.1.2,<9.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.mypy]
python_version = "3.12"
files = ["agent", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true  # for strict mypy: (this is the tricky one :-))
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
